--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ nav ul li a:hover::after{
 #about{
     padding: 80px 0;
     color:#ababab;
+    padding-left: 35px;
 }
 
 
@@ -105,8 +106,9 @@ nav ul li a:hover::after{
 }
 
 #about-col-1 img{
-    width: 100%;
+    width: 90%;
     border-radius: 15px;
+    
 }
 
 
@@ -377,6 +379,87 @@ form input, form textarea{
     color: #fff;
     font-size: 18px;
     border-radius: 6px;
+}
+
+
+/*---------------CSS FOR SMALL SCREENS------------------*/
+
+nav .fa-solid{
+    display: none;
+}
+
+nav .fa-regular{
+    display: none;
+}
+
+@media only screen and (max-width: 600px) {
+    .header-text{
+        margin-top: 100%;
+        font-size: 16px;
+    }
+    .header-text h1{
+        font-size: 30px;
+    }
+
+    nav .fa-solid{
+        display: block;
+        font-size: 25px;
+    }
+    
+    nav .fa-regular{
+        display: block;
+        font-size: 25px;
+    }
+
+    nav ul{
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.8s;
+
+    }
+
+    nav ul li{
+        display: block;
+        margin: 25px;
+
+    }
+
+    nav ul .fa-regular{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+    .sub-T{
+        font-size: 40px;
+    }
+
+    #about-col-1, .about-col-2{
+        flex-basis: 100%;
+        
+    }
+
+    #about-col-1{
+     margin-bottom: 30px;
+    }
+
+    .about-col-2{
+        font-size: 14px;
+    }
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
 }
 
 
